[package]
name = "device-driver-macro"
version = "0.5.0"
authors = ["Dion Dokter <diondokter@gmail.com>", "Emil Fresk <emil.fresk@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/diondokter/device-driver"
repository = "https://github.com/diondokter/device-driver"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
proc-macro-error = "1"

[dependencies.syn]
features = ["extra-traits", "full"]
version = "1"

[dev-dependencies]
trybuild = "1"

# do not optimize proc-macro deps or build scripts
[profile.dev.build-override]
codegen-units = 16
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 16
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
